--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.gson-2.8.2.jar=C:\\Users\\sebas\\Downloads\\gson-2.8.2.jar
 file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\sebas\\Downloads\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar
 includes=**
 j2ee.compile.on.save=true
@@ -41,7 +42,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv610ee9
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.33.jar}
+    ${file.reference.mysql-connector-j-8.0.33.jar}:\
+    ${file.reference.gson-2.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
